# pam_shim

./: .gitignore  CMakeLists.txt  Cargo.toml  README.md  flake.nix  pam_shim.map
crates/pam_shim_client/: Cargo.toml  build.rs  pam_shim.map
crates/pam_shim_client/src/: client.rs  lib.rs
crates/pam_shim_common/: Cargo.toml
crates/pam_shim_common/src/: lib.rs  messages.rs  sys.rs
crates/pam_shim_server/: Cargo.toml
crates/pam_shim_server/src/: client.rs  main.rs  sys.rs
include/shim/lib/: remote.h
include/shim/shared/: buffered_fd.h  message.h  util.h
nix/: default.nix  home-module.nix  test.nix
src/lib/: lib.c  remote.c
src/server/: server.c
src/shared/: buffered_fd.c  message.c  util.c
test/: CMakeLists.txt  main.c
